test/golden/-7172913172195124616.golden

INITIALPATH:7:22: error:
    • INITIALPATH:8:25:
  |
8 | bli\Pbar|]
  |                         ^
Lexical error in literal section

    • In the quasi-quotation: [fmt|foo
bli\Pbar|]
  |
7 | main = putStrLn [fmt|foo
  |                      ^^^...
